# research_class_structure

./: README.md  main.py  pyproject.toml  requirement.txt
class_structure/: Developer.py  DeveloperExperience.py  File.py
test/: test_Developer.py  test_File.py
